# kafkapy

./: .coveragerc  .pre-commit-config.yaml  404.html  README.md  SECURITY.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: test_and_coverage.yml
docs/: index.md  topics.md  user_guide.md
kafkapy/: __init__.py  __main__.py  __version__.py  acls.py  arg_opts.py  arguments.py  brokers.py  callbacks.py  client.py  colors.py  config.py  constants.py  consumer_groups.py  deco.py  exceptions.py  help.py  main.py  options.py  opts.py  out.py  parsers.py  partitions.py  properties.py  styles.py  text.py  topics.py  type_alias.py  types.py  utils.py
kafkapy/cli/: options.py  topics.py
kafkapy/client/: __init__.py  client.py  models.py  protocols.py
scripts/: dependencies.py
search/: search_index.json
tests/: conftest.py  markers.py  test_callbacks.py  test_configuration.py  test_help.py  test_main.py  test_out.py  test_parsers.py  test_placeholder.py  test_text.py  test_topics.py
tests/assets/: properties.yaml
tests/io/: test_root.py  test_topics.py
topics/: index.html
user_guide/: index.html
